fixed flicker on hover for contentAction

--- a/src/apps/content-editor/src/app/views/ItemEdit/Content/ActionsDrawer/ActionsDrawer.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Content/ActionsDrawer/ActionsDrawer.less
@@ -15,7 +15,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     li {
       list-style: none;
     }
